--- a/paper.tex
+++ b/paper.tex
@@ -29,53 +29,51 @@ All models are wrong; some are useful.
 Throughout this paper there will be three major categories of definitions; Universal, Structural, and Experienced.
 %
 \subsubsection*{Universal}
-Universal expressions are the axiomatic and supporting principles employed to form a mathematical foundation necessary to develop well-founded economic abstractions. They are fundamental concepts which have been developed over centuries of work by mathematicians, and thus are not deeply investigated within this body of work. Rather they are accepted as rigorous assumptions which have been throughly tested within other fields. Utilization of these commonly accepted definitions acts to scope conversations about expressions to those directly related to economic abstractions, thus allowing for deeper refinement of the concepts we strive to solidify within this work.  
+Universal definitions are those expressions that can be utilized in both structural and experienced contexts without changing the mathematical structure to define the specified concept. They help to properly scope, refine, and restrict discussion of objects within either construction. Depending on the context what may possibly change is the content of these sets and objects depending on what exists under the two different conceptions of reality. This will become more clear as universal definitions are utilized in the two different structures.  
 %
 \subsubsection*{Structural}
-Structural expressions are the basic structures . These definitions are foundational to the Experienced definitions and are where most of the assumptions and by definition developments of the economics construct will be built. More often than not the structural definitions will not be employed in real world utility measurements, but rather they will be used to compare the experienced outcomes compared to what the actual experience could have felt like under perfect information. Their practical importance will become very obvious within the structural definition section of the paper as well as when discussed in the experienced definition section. 
+Structural expressions, as the name implies, forms the structure of economic concepts that can be integrated with one another to form complex analysis. These definitions are foundational to the Experienced definitions and are where most of the assumptions and by definition developments of the economics construct will be built. More often than not the structural definitions will not be employed in real world utility measurements, but rather they will be used to compare the experienced outcomes compared to what the actual experience could have felt like under perfect information. Their practical importance will become very obvious within the structural definition section of the paper as well as when discussed in the experienced definition section. 
 %
 \subsubsection*{Experienced}
 Experienced expressions are those functions which describe what a person feels in the moment and are the most measurable and useful for determining utility measurements. As we will discuss later in this paper, corpus of information are in actuality an immutable set of facts, however how we recall them is a mutable set of facts with associated interpretations within the moment of recall meaning we can re-categorize events at a later time from bad events to good events, or refine our viewpoint on the issue itself. Experienced definitions deals with the imperfections of imperfect information and gives us a way to reason about the struggles that this can present .
 
 \section*{Universal Expressions}
- Universal definitions often rely on other axiomatic constructs from various fields of mathematics including set theory, graph theory, number theory, algebra, and calculus. Universal definitions are the supporting structures upon which this math is built, often the minutia that goes into maintaining these mathematical structures is best suited for higher level mathematics, and in the scope of economic discussion can quickly become ineffectual to quibble about. 
-\\
-\\
-The sets, $T$ and $I$, both contain every whole number starting from zero and counting up to and including the maximal element which exists for its respective domain. The maximal element is either less than or equal to the maximal element of the natural numbers, $\mathbb{N}^{0}$. Both $I$ and $T$ are subsets which may be equal to $\mathbb{N}^{0}$, but no claim about either set being a proper subsets will be made at the universal level. The ambiguity of the maximal element is intentional as the existence of elements in a finite or infinite manner is indeterminable. \eqref{eq:it}
+The sets, $T$ and $I$, both start from zero and contain every whole number up to and including the maximal element which exists for its respective domain. The maximal element is either less than or equal to the maximal element of the natural numbers, $\mathbb{N}^{0}$. The ambiguity of the maximal element is intentional as the existence of elements in a finite or infinite manner is indeterminable. \eqref{eq:time} \eqref{eq:identity}
 \\
 \\
 % The time portion of how people react to time differently and when the time is actually incremented and decremented in relation to the world vs how individuals will increment and decrement time is a finer point that should be made here. These distinctions are going to be important to adequetly cover here else the rest of the paper may suffer from needing to be rewritten again and again. We should have a subset as part ofthe structural definition which comes from T that better describes the specifics and is context dependent on the individual or thing being discussed.
-$T$ represents the set of time starting at an initial reference point zero and progressing forward indeterminable. A specific time $t$ exists whenever a property of the world changes. This is a reflective property which is used to identify a change in time in the real world which we are modeling, or in an imagined environment where we wish to specify changes. It is key to understand that time is universal in the sense that any time change for any individual element of the world results in a time change for every element of that world. A person could therefore have several time changes recorded without anything personally changing for them. This will become important in discussions of time-lag especially in comparative analysis of experienced situations. \eqref{eq:tint}. 
+%
+$T$ represents the set of all global times for a specified context. For instance a structural context represents most complete picture containing every time for every object in the world that is being modeled/imagined, where as experienced contexts are globally seen through the object which is experiencing the situation. starting at an initial reference point zero and progressing forward indeterminable. A specific time $t$ exists whenever a property of the specified world changes. It is key to understand that time is universal in the sense that any time change for any individual element of the world results in a time change for every element of that world. A person could therefore have several time changes recorded without anything personally changing for them. This will become important in discussions of time-lag especially in comparative analysis of experienced situations. \eqref{eq:tint}. 
 \\
 \\ 
 % talk about how I is the set of all possible things but those things have different macro and micro designations. So things like function vs makeup of materials and talk about how those things can be manifested into one another and the functions that may exist to show larger I sets and why this is important to concepts like a person specified by i. those functions can both be in a structural context as well as a functional context and thus layers must be determined at the universal onset. For clarity sake this is an important area to split hairs and make some decisions. I should contain all the possible indexes including macro indexes so it may actually have to be \mathbb{I} instead so that it can contain a set as well. instead of that dumb idea just point out that the indicator is dependent on what it is indexing and thus contains all those elements anyway and can be broken down as such that may still require something for I but it will not require anything for T so look into that a little more but overall the indication should be a function vs contains type of thing. 
 $I$ represents the set of all possible indexes also starting at $0$ and can continue indefinitely as well. The symbol $i$ is used to represent an element from the total set of indexes, $I$ \eqref{eq:iini}. 
 %
-\begin{equation} \label{eq:time} 
-T \defeq \{ t \in A \subseteq \mathbb{N}^{0} \mid  \forall t \geq 1\exists a \in A.t-a=1 \} 
+\begin{equation} \label{eq:global_time} 
+T \defeq \{ t \in A \subseteq \mathbb{N}^{0} \mid \forall t \leq \max A\exists t^{*} \in A.t-t^{*}=1 \} 
 \end{equation}
-\begin{equation} \label {eq:index}
-I \defeq \{ i \in A \subseteq \mathbb{N}^{0} \mid \forall i \geq 1 \exists a \in A.i-a=1 \}
+\begin{equation} \label {eq:global_identity}
+I \defeq \{ i \in A \subseteq \mathbb{N}^{0} \mid \forall i \leq \max A\exists i^{*} \in A.i-i^{*}=1 \}
 \end{equation}
 \begin{equation} \label{eq:object_time}
 T_{o} \defeq \{ t \in T \mid t_{o} \}
 \end{equation}
-\begin{equation} \label {eq:object_index}
+\begin{equation} \label {eq:object_identity}
 I_{o} \defeq \{ i \in I \mid i_{o} \}
 \end{equation}
-\begin{equation} \label{eq:subset_time}
+\begin{equation} \label{eq:subset_global_time}
 T_{o} \subseteq T
 \end{equation}
-\begin{equation} \label {eq:subset_index}
+\begin{equation} \label {eq:subset_global_identity}
 I_{o} \subset I
 \end{equation}
 \begin{equation} \label{eq:relative_object_time} 
-\mathcal{T}_{o} \defeq \{ \mathfrak{t}_{o} \in T \mid \exists \mathfrak{t}_{o} = |T_{o}| \wedge \forall \mathfrak{t}_{o}.1 \leq \mathfrak{t}_{o} \leq |T_{o}|  \exists \mathfrak{a}_{o} \in T.\mathfrak{t}_{o}-\mathfrak{a}_{o}=1 \} 
+\mathcal{T}_{o} \defeq \{ \mathfrak{t}_{o} \in T \mid \forall \mathfrak{t}_{o}.1 \leq \mathfrak{t}_{o}  < |T_{o}| \exists \mathfrak{t}^{*}_{o} \in T.\mathfrak{t}_{o}-\mathfrak{t}^{*}_{o}=1 \} 
 \end{equation}
-\begin{equation} \label{eq:relative_object_index}
-\mathcal{I}_{o} \defeq \{ \mathfrak{i}_{o} \in I \mid \exists \mathfrak{i}_{o} = |I_{o}| \wedge \forall \mathfrak{i}_{o}.1 \leq \mathfrak{i}_{o} \leq |I_{o}|  \exists \mathfrak{a}_{o} \in I.\mathfrak{i}_{o}-\mathfrak{a}_{o}=1 \} 
+\begin{equation} \label{eq:relative_object_identity}
+\mathcal{I}_{o} \defeq \{ \mathfrak{i}_{o} \in I \mid \forall \mathfrak{i}_{o}.1 \leq \mathfrak{i}_{o} < |I_{o}| \exists \mathfrak{i}^{*}_{o} \in I.\mathfrak{i}_{o}-\mathfrak{i}^{*}_{o}=1 \} 
 \end{equation}
-\begin{equation} \label{eq:o}
+\begin{equation} \label{eq:object}
 O \defeq \{ o \}
 \end{equation}
 %
