updated universal & structural explnations

--- a/paper.tex
+++ b/paper.tex
@@ -26,13 +26,15 @@ LIST OF GOALS
 \section*{Introduction}
 All models are wrong; some are useful. 
 \subsection*{Definition Categories}
-Throughout this paper there will be three major categories of definitions; Universal, Structural, and Experienced.
+Throughout this paper there will be three major categories of definitions/expressions; Universal, Structural, and Experienced.
 %
 \subsubsection*{Universal}
-Universal definitions are those expressions that can be utilized in both structural and experienced contexts without changing the mathematical structure to define the specified concept. They help to properly scope, refine, and restrict discussion of objects within either construction. Depending on the context what may possibly change is the content of these sets and objects depending on what exists under the two different conceptions of reality. This will become more clear as universal definitions are utilized in the two different structures.  
+Universal expressions can be utilized in both structural and experienced contexts without changing the mathematical structure to define the specified concept. They help to properly qualify, refine, and scope discussion of objects within either construct. Depending on the context, changes are possible within the content of these sets and objects. The sets as defined are built upon what can be existentially quantified under the contextual conception of reality in which they are being evaluated.   
 %
 \subsubsection*{Structural}
-Structural expressions, as the name implies, forms the structure of economic concepts that can be integrated with one another to form complex analysis. These definitions are foundational to the Experienced definitions and are where most of the assumptions and by definition developments of the economics construct will be built. More often than not the structural definitions will not be employed in real world utility measurements, but rather they will be used to compare the experienced outcomes compared to what the actual experience could have felt like under perfect information. Their practical importance will become very obvious within the structural definition section of the paper as well as when discussed in the experienced definition section. 
+Structural expressions form the foundational, robustly designed, mathematical necessary for effectual, direct, and unambiguous discourse in matters related to economics. 
+%
+%Structural definitions assume knowledge of objective reality independent of bias, and uncertainity related to future values of all data within the world.   
 %
 \subsubsection*{Experienced}
 Experienced expressions are those functions which describe what a person feels in the moment and are the most measurable and useful for determining utility measurements. As we will discuss later in this paper, corpus of information are in actuality an immutable set of facts, however how we recall them is a mutable set of facts with associated interpretations within the moment of recall meaning we can re-categorize events at a later time from bad events to good events, or refine our viewpoint on the issue itself. Experienced definitions deals with the imperfections of imperfect information and gives us a way to reason about the struggles that this can present .
