--- a/paper.tex
+++ b/paper.tex
@@ -26,69 +26,110 @@ LIST OF GOALS
 \section*{Introduction}
 All models are wrong; some are useful. 
 \subsection*{Definition Categories}
-Throughout this paper there will be three major categories of definitions/expressions; Universal, Structural, and Experienced.
-%
-\subsubsection*{Universal}
-Universal expressions can be utilized in structural and experienced contexts without changing the mathematical structure to define the specified concept. They help to properly qualify, refine, and scope discussion of objects within either construct. Depending on the context, changes are possible within the content of these sets and objects. The sets as defined are built upon what can be existentially quantified under the contextual conception of reality in which they are being evaluated.   
+Throughout this paper there will be three major categories of definitions/expressions; Structural, Optimal, and Rational.
 %
 \subsubsection*{Structural}
-Structural expressions form the foundational, robustly designed, mathematic objects necessary for effectual, direct, and unambiguous discourse in matters related to economics. They assume knowledge of objective reality independent of bias, and/or estimation errors related to future values of all data within the world.    
+Structural expressions form the foundational anatomy for a set of robustly designed mathematic objects necessary for calculated, effectual, and direct discourse in matters related to economics. The generic concepts developed as structural formalizations provide a framework to have precise conversations about economic constructs. This allows for a more comprehensive and consumable representation of the topic being investigated. The sets defined here are built upon what can be existentially quantified under all possible conceptions of the specified world/environment being explored. Thus the expressions incorporate both the sets of all possible optimal realities, and all possible rational realities that could be interpreted by any of the objects within the world.     
 %
-\subsubsection*{Experienced}
+\subsubsection*{Optimal}
+ The sets of optimal realities start from initial conditions and proceed in a manner that will maximize the utility rational for the object(s) of interest over a time range being considered. The set of rational realities operates from initial conditions and proceeds down every
+%
+\subsubsection*{Rational}
+They help to properly qualify, refine, and scope discussion of objects within either construct. Depending on the context, changes are possible within the content of these sets and objects.
 
 
-\section*{Universal Expressions}
+\section*{Structural Expressions}
 \subsection*{Time}
-% A brief description/overview of global times, as well as an explanation of how global times exists under different contexts. This servers to state the existential qualifying factors under both structural and experienced expressions. 
-The set, $T$, represents the set of all global times for a specified context. A global time, $t$, exists whenever any object's property changes within the world as viewed through the lens of a specified context. For instance from a structural point of view, which represents the most complete and accurate view of the environment, $T$ contains a time element, $t$, whenever any object in the world that is being modeled/imagined changes, unless it is a simultaneous change which can be captured by a global time value shared amongst the objects that have simultaneously changed. By the same measure in an experienced context, which represents the world as it is seen through the object of interest's perspective, $T$ contains a time element, $t$, whenever the object of interest recognizes and/or observes a change in any of the objects being modeled/imagined. Furthermore, the object of interest in an experienced context may lump changes together into a single change if they learn about it at the same time and do not attempt to determine whether or not the changes truly happened simultaneously. The variation in measurement of time can become important to discussions of time-lag, learning curves, and much more. 
+% A brief description/overview of global times, as well as an explanation of how global times exists under different contexts. This servers to state the existential qualifying factors under both optimal and rational expressions. 
+The set, $T$, represents the set of all possible global times for a given world. A global time, $t$, exists whenever any object's property can change within the world being considered. For instance from a optimal view the environment, which represents the most complete and accurate view within the current context, $T$ contains a time element, $t$, whenever any object in the world that is being modeled/imagined changes, unless it is a simultaneous change which can be captured by an existing global time element shared amongst the objects that have simultaneously changed. By the same measure in an rational context, which represents the world as it is rational by all of the objects, $T$ contains a time element, $t$, whenever the object of interest recognizes and/or observes a change in any of the objects being modeled/imagined. Furthermore, the object of interest in an rational context may lump changes together into a single change if they learn about it at the same time and do not attempt to determine whether or not the changes truly happened simultaneously. The variation in measurement of time can become important to discussions of time-lag, learning curves, and much more. 
 \\
 \\
 % A definition of global time from the math perspective draws from the exestital qualifiers state in the above paragraph.
-The set, $T$, starts from an initial reference point of zero and contain every whole number up to and including the size of the assumed set $A$. The size of $A$ is either less than or equal to the size of the natural numbers, $\mathbb{N}^{0}$. The size of $A$ is intentional ambiguous as the existence of elements in a finite or infinite manner is indeterminable and therefore may be seen uniquely under the perspective of different objects. \eqref{eq:global_time}
+The set, $T$, starts from an initial reference point of zero and contain every whole number up to and including the size of the assumed set $A$. The size of the assumed set, $A$, is either less than or equal to the size of the natural numbers, $\mathbb{N}^{0}$. The size of $A$ is intentional ambiguous as the existence of elements in a finite or infinite manner is indeterminable and therefore may be seen uniquely under the perspective of different objects. \eqref{eq:global_time}
 \\
 \\ 
 The set, $T$, can be scoped to a specific object $o_{i}$. The resulting set $T_{o_{i}}$ contains all the global time elements where the specified object changed in at least one property (other than global time). \eqref{eq:object_element_time}
 \\
 \\
-This can also be done over the set $O \in \mathbb{O}$.Where the resulting set $T_{O}$ contains all the global time elements where at least one elements of the specified object set experienced at least on property change (other than global time). For example the time scoped to the population $T_{\mathbb{P}}$ would contain a global time for every time from the total set of time $T$ where at least one person experienced a change in one of their properties. However if we attempt to take this one step further and scope over the set of sets $\mathbb{O}$ we see that this implies $T \Longleftrightarrow T_{\mathbb{O}}$. 
-\begin{equation} \label{eq:global_time} 
+This can also be done over the set $O \in \mathbb{O}$.Where the resulting set $T_{O}$ contains all the global time elements where at least one elements of the specified object set rational at least on property change (other than global time). For example the time scoped to the population $T_{\mathbb{P}}$ would contain a global time for every time from the total set of time $T$ where at least one person rational a change in one of their properties. However if we attempt to take this one step further and scope over the set of sets $\mathbb{O}$ we see that this implies $T \Longleftrightarrow T_{\mathbb{O}}$. 
+\begin{equation} \label{eq:global_times} 
 T \defeq \{ t \in A \subseteq \mathbb{N}^{0} \mid \forall t.1 \leq t \leq |A|\exists t^{*} \in A.t-t^{*}=1 \} 
 \end{equation}
-\begin{equation} \label{eq:object_element_time}
+\begin{equation} \label{eq:object_element_times}
 T_{o_{i}} \defeq \{ t \in T \mid o_{i, t} \ne o_{i, t-1} \}
 \end{equation}
-\begin{equation} \label{eq:subset_global_time}
+\begin{equation} \label{eq:subset_global_times}
 T_{o} \subseteq T
 \end{equation}
-\begin{equation} \label{eq:relative_object_time} 
+\begin{equation} \label{eq:relative_object_times} 
 \mathcal{T}_{o} \defeq \{ \mathfrak{t}_{o} \in T \mid \forall \mathfrak{t}_{o}.1 \leq \mathfrak{t}_{o}  < |T_{o}| \exists \mathfrak{t}^{*}_{o} \in T.\mathfrak{t}_{o}-\mathfrak{t}^{*}_{o}=1 \} 
 \end{equation}
-\subsection*{Identity}
-% talk about how I is the set of all possible things but those things have different macro and micro designations. So things like function vs makeup of materials and talk about how those things can be manifested into one another and the functions that may exist to show larger I sets and why this is important to concepts like a person specified by i. those functions can both be in a structural context as well as a functional context and thus layers must be determined at the universal onset. For clarity sake this is an important area to split hairs and make some decisions. I should contain all the possible indexes including macro indexes so it may actually have to be \mathbb{I} instead so that it can contain a set as well. instead of that dumb idea just point out that the indicator is dependent on what it is indexing and thus contains all those elements anyway and can be broken down as such that may still require something for I but it will not require anything for T so look into that a little more but overall the indication should be a function vs contains type of thing. 
-$I$ represents the set of all possible indexes also starting at $0$ and can continue indefinitely as well. The symbol $i$ is used to represent an element from the total set of indexes, $I$ \eqref{eq:iini}. 
 %
-\begin{equation} \label {eq:global_identity}
-I \defeq \{ i \in A \subseteq \mathbb{N}^{0} \mid \forall i.1 \leq i \leq \max A\exists i^{*} \in A.i-i^{*}=1 \}
+\begin{equation} \label {eq:global_identities}
+I \defeq \{ i \in A \subseteq \mathbb{N}^{0} \mid \forall i.1 \leq i \leq |A|\exists i^{*} \in A.i-i^{*}=1 \}
 \end{equation}
-\begin{equation} \label {eq:object_identity}
-I_{o} \defeq \{ i \in I \mid i_{o} \}
+\begin{equation} \label {eq:object_identities}
+I_{O} \defeq \{ i \in I \mid o_{i} \in O \}
 \end{equation}
-\begin{equation} \label {eq:subset_global_identity}
-I_{o} \subset I
+\begin{equation} \label {eq:subset_global_identities}
+I_{O} \subset I
 \end{equation}
-\begin{equation} \label{eq:relative_object_identity}
-\mathcal{I}_{o} \defeq \{ \mathfrak{i}_{o} \in I \mid \forall \mathfrak{i}_{o}.1 \leq \mathfrak{i}_{o} < |I_{o}| \exists \mathfrak{i}^{*}_{o} \in I.\mathfrak{i}_{o}-\mathfrak{i}^{*}_{o}=1 \} 
+\begin{equation} \label{eq:relative_object_identities}
+\mathcal{I}_{O} \defeq \{ \mathfrak{i}_{O} \in I \mid \forall \mathfrak{i}_{O}.1 \leq \mathfrak{i}_{O} < |I_{O}| \exists \mathfrak{i}^{*}_{O} \in I.\mathfrak{i}_{O}-\mathfrak{i}^{*}_{O}=1 \} 
 \end{equation}
-\begin{equation} \label{eq:object}
+%
+\begin{equation} \label{eq:objects}
 O \defeq \{ o \}
 \end{equation}
+%
+\begin{equation} \label {eq:ranges}
+R_{t^{0},t^{1}} \defeq \{ t \in T \mid t^{0} \leq t^{*} \leq t^{1} \}
+\end{equation}
+%
+\begin{equation} \label{eq:person} 
+P_{i} \defeq \{ p_{i,t} \} 
+\end{equation}
+\begin{equation} \label{eq:person_time} 
+P_{i,t} \defeq \{ p \in P_{i} \mid p_{i,t^{*} \leq t} \} 
+\end{equation}
+\begin{equation} \label{eq:person_time_range} 
+P_{i,R_{t^{0},t^{1}}} \defeq \{ p \in P_{i} \mid p_{i,R_{t^{0},t^{1}}} \} 
+\end{equation}    
+%
+\begin{equation} \label{eq:population} 
+\mathbb{P} \defeq \{ P_{i} \} 
+\end{equation}
+\begin{equation} \label{eq:population_time} 
+\mathbb{P}_{t} \defeq \{ P \mid P_{i,t^{*}=t} \} 
+\end{equation}
+\begin{equation} \label{eq:population_range} 
+\mathbb{P}_{r_{t^{0},t^{1}}} \defeq \{ P \mid P_{i,r^{*}_{t^{0},t^{1}}=r^{ }_{t^{0},t^{1}}} \} 
+\end{equation}
+%
+\begin{equation} \label{eq:group} 
+G^{2}_{1} \defeq \{ P_{i} \in \mathbb{P} \mid \}
+\end{equation}
+%
+\begin{equation} \label{eq:community} 
+\mathbb{C} \defeq \wp(G) 
+\end{equation}
+%
+%
+%
+\subsection*{Identity}
+% talk about how I is the set of all possible things but those things have different macro and micro designations. So things like function vs makeup of materials and talk about how those things can be manifested into one another and the functions that may exist to show larger I sets and why this is important to concepts like a person specified by i. those functions can both be in a optimal context as well as a functional context and thus layers must be determined at the structural onset. For clarity sake this is an important area to split hairs and make some decisions. I should contain all the possible indexes including macro indexes so it may actually have to be \mathbb{I} instead so that it can contain a set as well. instead of that dumb idea just point out that the indicator is dependent on what it is indexing and thus contains all those elements anyway and can be broken down as such that may still require something for I but it will not require anything for T so look into that a little more but overall the indication should be a function vs contains type of thing. 
+$I$ represents the set of all possible indexes also starting at $0$ and can continue indefinitely as well. The symbol $i$ is used to represent an element from the total set of indexes, $I$ \eqref{eq:iini}. 
+%
+
 %
 Ranges, The use of *, Locations and other refinement/scoping variables, the use of A and a and $\mathfrak{a}$, the convention used for the majority of the paper and exceptions to these rules. How reflexive properties apply to things like indexes and time indexes. The world variable. 
 \\
 \\
 The choice to start at $0$ for these sets was a somewhat arbitrary choice representing the author's preference to not discuss negative time, nor indexes. This decision was not made without some consideration. Any discussion of negative time, negatively indexed items, or the absence of an agreed upon initial reference point seems to only muddle productive conversation within the scope of economic thought. Still it is possible to use the constructs later discussed by utilizing any set that progress indefinitely in at least one direction, and may stretch indefinitely in both directions if so desired. 
 %
-\section*{Structural Definitions}
+
+
+\section*{optimal Definitions}
 \subsection*{Person}
 A person, $P_{i}$, is the set of all elements $p_{i,t}$ that exist for the specified player, $i$. Each element represent a snapshots of that individual at any given time $t$. \eqref{eq:person}
 \\
@@ -98,15 +139,7 @@ A person at time, $t$, denoted by $P_{i,t}$, is the set of all elements $p_{i,t}
 \\
 A person between two times, $t_{0}$ and $t_{1}$, is denoted by $P_{i}$
 %
-\begin{equation} \label{eq:person} 
-P_{i} \defeq \{ p_{i,t} \} 
-\end{equation}
-\begin{equation} \label{eq:person_time} 
-P_{i,t} \defeq \{ p \in P_{i} \mid p_{i,t^{*} \leq t} \} 
-\end{equation}
-\begin{equation} \label{eq:person_time_range} 
-P_{i,r_{t_{0},t_{1}}} \defeq \{ p \in P_{i} \mid p_{i,t_{0} \leq t^{*} \leq t_{1}} \} 
-\end{equation}    
+
 %
 \subsubsection*{Populations}
 The population, $P$, is the set of all people, and a person, $p$, is any individual element of the population. The population is an immutable construct which contains individual elements that do not change over time. Rather each element stores a unique identification index, $i$, for each physical person, and several time indexes, $t$, allowing access to the unique states, functions, and values of the individual at any given time $t$ \eqref{eq:pop}.
@@ -118,35 +151,30 @@ A population at any selected time $t$, denoted by $P_{t}$, contains all the elem
 A population from any selected time $t_{0}$ to any other selected time $t_{1}$ is the symmetric difference of the populations $P_{t_{0}}$ and $P_{t_{1}}$. The symmetric difference is simply an XOR function between the two populations.The resulting population includes all people starting at $t_{0}$ and ending at $t_{1}$.
 % 
 
-\begin{equation} \label{eq:population} 
-\mathbb{P} \defeq \{ P_{i} \} 
-\end{equation}
-\begin{equation} \label{eq:population_time} 
-\mathbb{P}_{t} \defeq \{ P \mid P_{i,t^{*}=t} \} 
-\end{equation}
-\begin{equation} \label{eq:population_range} 
-\mathbb{P}_{r_{t_{0},t_{1}}} \defeq \{ P \mid P_{i,r^{*}_{t0,t1}=r^{ }_{t0,t1}} \} 
-\end{equation}
+
 %
 \subsection*{Groups}
-\begin{equation} \label{eq:comgrp} \mathbb{G} \defeq \{ a \in A \in \mathbb{P} \mid \forall t\exists a_{t}|A| \geq 2 \} \end{equation}
+
 \subsection*{Societies}
 %
 A Society, $\mathbb{S}$, is the power set of the total population, $P$ \eqref{eq:socdef}.
-\begin{equation} \label{eq:socdef} \mathbb{S} \defeq \wp(P) \end{equation}
+
 %
 A community, $C$, is one of the possible subset of the society, $S$ \eqref{eq:comsub}, where $g$ is the power set of $g^{*}$ \eqref{eq:comdef}, and where $g^{*}$ is a set selected from all possible subsets of the population $P$ with cardinality greater than one, but less than the cardinality of the total population \eqref{eq:comgrp}.
  
 %
-\section*{Experienced Definitions}
+\section*{Rational Definitions}
 \section*{Alphabet}
 $a$: Arbitrary element \\
 $\mathfrak{i}$: Relative index element \\
 $p$: Person element \\
-$t$: universal time element \\
+$t$: structural time element \\
 $\mathfrak{t}$: Relative time element \\
 $A$: Arbitrary Set \\
 
 \section*{Conventions}
-Capital letter sets will typically contain elements that are all the same type. The element 
+Capital letter sets will typically contain elements that are all the same type. The element
+\\ Flat Bar over the letter represents optimal
+\\ Tilda over the letter represents rational 
+\\ Issues of time lag are always issues that should be handled as a matter of framing the game not as a matter of time disparity. For instance when comparing the rational vs optimal viewpoint of a game the framing should be different allowing for an understanding to deal with estimation errors down to the point that they could be. optimal definitions are still a matter of comprehensive knowledge but in some subgames it is possible to obtain all the factors leading in to a consideration. Thus it is important to show how a persons experiences could be varied accounting for the time it would require to make a decision and show how the optimal decision is simply about the amount of time and show how the learning curve would have to approach this from where they are experiencing right now. Talk about barriers to entry obviously a little amount of effort may actually be a decrease in output because it took more work for a less then marginally greater benefit. Talk about the diminishing returns on investiment and the breaking point. Identify areas of that they would be willing to break and show how those regions are difficult. l   
 \end{document}
