Updated Once Again

--- a/paper.tex
+++ b/paper.tex
@@ -5,13 +5,12 @@
 \usepackage{amsfonts}
 \usepackage{mathrsfs}
 
-
 %commands
 \newcommand{\defeq}{\stackrel{\smash{\scriptscriptstyle\mathit{def}}}{=}}
 
 %opening
-\title{A Minimalist Set of Axiomatic and Supporting Expressions to Comprehensively Build and Discuss Economic Constructs in a Mathematically Robust and Rigorous Manner}
-\author{Michael Smythe}
+\title{A Minimal Set of Axiomatic Definitions and Supporting Expressions to Comprehensively Build a Domain Specific Language to Discuss and Model Economic Constructs in a Mathematically Robust and Rigorous Manner}
+d \author{Michael Smythe}
 
 \begin{document}
 
@@ -26,10 +25,22 @@ LIST OF GOALS
 \section*{Introduction}
 All models are wrong; some are useful. 
 \subsection*{Definition Categories}
-Throughout this paper there will be three major categories of definitions/expressions; Structural, Optimal, and Rational.
+Throughout this paper there will be three major categories of definitions/expressions; Structures, Functions, and Rational.
 %
-\subsubsection*{Structural}
-Structural expressions form the foundational anatomy for a set of robustly designed mathematic objects necessary for calculated, effectual, and direct discourse in matters related to economics. The generic concepts developed as structural formalizations provide a framework to have precise conversations about economic constructs. This allows for a more comprehensive and consumable representation of the topic being investigated. The sets defined here are built upon what can be existentially quantified under all possible conceptions of the specified world/environment being explored. Thus the expressions incorporate both the sets of all possible optimal realities, and all possible rational realities that could be interpreted by any of the objects within the world.     
+\subsubsection*{Structures}
+In order to have precise, calculated, effectual, and direct discourse involving economics an extensible framework of foundational economic concepts must be developed and maintained as formalized structures. Well-defined structures expose a more comprehensive, consumable, and expressive interface; t
+\\
+\\
+ 
+Reason, scope, debate, properly show impact and value 
+
+The sets defined here are built upon what can be existentially quantified under all possible conceptions of the specified world/environment being explored. 
+
+% meta-structures/primatives
+% resource structures: natrual and created 
+% object structures
+% environment structures
+
 %
 \subsubsection*{Optimal}
  The sets of optimal realities start from initial conditions and proceed in a manner that will maximize the utility rational for the object(s) of interest over a time range being considered. The set of rational realities operates from initial conditions and proceeds down every
@@ -38,10 +49,10 @@ Structural expressions form the foundational anatomy for a set of robustly desig
 They help to properly qualify, refine, and scope discussion of objects within either construct. Depending on the context, changes are possible within the content of these sets and objects.
 
 
-\section*{Structural Expressions}
+\section*{Structures}
 \subsection*{Time}
 % A brief description/overview of global times, as well as an explanation of how global times exists under different contexts. This servers to state the existential qualifying factors under both optimal and rational expressions. 
-The set, $T$, represents the set of all possible global times for a given world. A global time, $t$, exists whenever any object's property can change within the world being considered. For instance from a optimal view the environment, which represents the most complete and accurate view within the current context, $T$ contains a time element, $t$, whenever any object in the world that is being modeled/imagined changes, unless it is a simultaneous change which can be captured by an existing global time element shared amongst the objects that have simultaneously changed. By the same measure in an rational context, which represents the world as it is rational by all of the objects, $T$ contains a time element, $t$, whenever the object of interest recognizes and/or observes a change in any of the objects being modeled/imagined. Furthermore, the object of interest in an rational context may lump changes together into a single change if they learn about it at the same time and do not attempt to determine whether or not the changes truly happened simultaneously. The variation in measurement of time can become important to discussions of time-lag, learning curves, and much more. 
+The set, $T$, represents the set of all possible global times for a given world. A global time, $t$, exists whenever any object's property can change within the world being considered. For instance from a optimal view the environment, which represents the most complete and accurate view within the current context, $T$ contains a time element, $t$, whenever any object in the world that is being modeled/imagined changes, unless it is a simultaneous change which can be captured by an existing global time element shared amongst the objects that have simultaneously changed. By the same measure in an rational context, which represents the world as it is rational by all of the object s, $T$ contains a time element, $t$, whenever the object of interest recognizes and/or observes a change in any of the objects being modeled/imagined. Furthermore, the object of interest in an rational context may lump changes together into a single change if they learn about it at the same time and do not attempt to determine whether or not the changes truly happened simultaneously. The variation in measurement of time can become important to discussions of time-lag, learning curves, and much more. 
 \\
 \\
 % A definition of global time from the math perspective draws from the exestital qualifiers state in the above paragraph.
@@ -115,7 +126,6 @@ G^{2}_{1} \defeq \{ P_{i} \in \mathbb{P} \mid \}
 \end{equation}
 %
 %
-%
 \subsection*{Identity}
 % talk about how I is the set of all possible things but those things have different macro and micro designations. So things like function vs makeup of materials and talk about how those things can be manifested into one another and the functions that may exist to show larger I sets and why this is important to concepts like a person specified by i. those functions can both be in a optimal context as well as a functional context and thus layers must be determined at the structural onset. For clarity sake this is an important area to split hairs and make some decisions. I should contain all the possible indexes including macro indexes so it may actually have to be \mathbb{I} instead so that it can contain a set as well. instead of that dumb idea just point out that the indicator is dependent on what it is indexing and thus contains all those elements anyway and can be broken down as such that may still require something for I but it will not require anything for T so look into that a little more but overall the indication should be a function vs contains type of thing. 
 $I$ represents the set of all possible indexes also starting at $0$ and can continue indefinitely as well. The symbol $i$ is used to represent an element from the total set of indexes, $I$ \eqref{eq:iini}. 
@@ -127,7 +137,6 @@ Ranges, The use of *, Locations and other refinement/scoping variables, the use 
 \\
 The choice to start at $0$ for these sets was a somewhat arbitrary choice representing the author's preference to not discuss negative time, nor indexes. This decision was not made without some consideration. Any discussion of negative time, negatively indexed items, or the absence of an agreed upon initial reference point seems to only muddle productive conversation within the scope of economic thought. Still it is possible to use the constructs later discussed by utilizing any set that progress indefinitely in at least one direction, and may stretch indefinitely in both directions if so desired. 
 %
-
 
 \section*{optimal Definitions}
 \subsection*{Person}
@@ -150,7 +159,6 @@ A population at any selected time $t$, denoted by $P_{t}$, contains all the elem
 \\
 A population from any selected time $t_{0}$ to any other selected time $t_{1}$ is the symmetric difference of the populations $P_{t_{0}}$ and $P_{t_{1}}$. The symmetric difference is simply an XOR function between the two populations.The resulting population includes all people starting at $t_{0}$ and ending at $t_{1}$.
 % 
-
 
 %
 \subsection*{Groups}
