Updated Once More

--- a/paper.tex
+++ b/paper.tex
@@ -10,7 +10,7 @@
 
 %opening
 \title{A Minimal Set of Axiomatic Definitions and Supporting Expressions to Comprehensively Build a Domain Specific Language to Discuss and Model Economic Constructs in a Mathematically Robust and Rigorous Manner}
-d \author{Michael Smythe}
+\author{Michael Smythe}
 
 \begin{document}
 
@@ -28,18 +28,18 @@ All models are wrong; some are useful.
 Throughout this paper there will be three major categories of definitions/expressions; Structures, Functions, and Rational.
 %
 \subsubsection*{Structures}
-In order to have precise, calculated, effectual, and direct discourse involving economics an extensible framework of foundational economic concepts must be developed and maintained as formalized structures. Well-defined structures expose a more comprehensive, consumable, and expressive interface; t
+In order to have precise, calculated, effectual, and direct discourse regarding economics a formalized and extensible framework of foundational economic concepts is necessary. Developing and maintaining robust, well-defined structures further exposes a more comprehensive, consumable, and expressive model. 
 \\
 \\
- 
-Reason, scope, debate, properly show impact and value 
+Allows for targeted research, which can become rapidly more granular and its scope more specific or more general without changing the established work. Avoid completely redesigning the problem to fit specifics of another problem, avoid dependencies and limitations of less flexible structures. scope and reason about the issue far more effectively because the issues that have not been explicitly handled are still required to be handled by the process of rolling up other properties and explicitly ignoring all other cases. Further allows for much better comparison of effects. The math is more reproducible, and debates about the validity of answers is less likely to become about how a thing was modeled and what was modeled instead. Illuminate failures in our structural understanding themselves and provide a common language which can be discussed at length and test within code.  
+
+Reason, scope, debate, properly show impact and value, granular, rapidly assess, expand, shrink, grow, specify, 
 
 The sets defined here are built upon what can be existentially quantified under all possible conceptions of the specified world/environment being explored. 
 
-% meta-structures/primatives
-% resource structures: natrual and created 
-% object structures
-% environment structures
+% primative constructs
+% resource & environment structures: natrual and created 
+% person, person-like, group, and group-like structures
 
 %
 \subsubsection*{Optimal}
@@ -185,4 +185,6 @@ Capital letter sets will typically contain elements that are all the same type. 
 \\ Flat Bar over the letter represents optimal
 \\ Tilda over the letter represents rational 
 \\ Issues of time lag are always issues that should be handled as a matter of framing the game not as a matter of time disparity. For instance when comparing the rational vs optimal viewpoint of a game the framing should be different allowing for an understanding to deal with estimation errors down to the point that they could be. optimal definitions are still a matter of comprehensive knowledge but in some subgames it is possible to obtain all the factors leading in to a consideration. Thus it is important to show how a persons experiences could be varied accounting for the time it would require to make a decision and show how the optimal decision is simply about the amount of time and show how the learning curve would have to approach this from where they are experiencing right now. Talk about barriers to entry obviously a little amount of effort may actually be a decrease in output because it took more work for a less then marginally greater benefit. Talk about the diminishing returns on investiment and the breaking point. Identify areas of that they would be willing to break and show how those regions are difficult. l   
+
+hierarchical groups and  communities
 \end{document}
